add config for backend

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -106,6 +106,7 @@
         <span id="errorMessage"></span>
         <span class="notification-close" onclick="hideErrorNotification()">×</span>
     </div>
+    <script src="js/config_backend.js"></script>
     <script src="js/fileHandler.js"></script>
     <script src="js/api.js"></script>
     <script src="js/main.js"></script>
